--- a/bike-ui/src/app/app.component.html
+++ b/bike-ui/src/app/app.component.html
@@ -1,9 +1,7 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to Globomatics bike!
-  </h1>
-  
-  </div>
+    <h1>
+      Globomatics Bike Registery System
+    </h1>
+</div>
 
-  <router-outlet></router-outlet>
+<router-outlet></router-outlet>
